# gptmux

./: .gitignore  .goreleaser.yaml  Dockerfile  Dockerfile.src  LICENSE  Makefile  README.md  example.yaml  go.mod  go.sum
.github/workflows/: gorelease.yml
api/: readme.md  swagger.yaml
api/go/: README.md  api_assistants_beta.go  api_audio.go  api_chat.go  api_completions.go  api_embeddings.go  api_files.go  api_fine_tuning.go  api_images.go  api_messages.go  api_models.go  api_moderations.go  api_runs.go  api_threads.go  model__v1__threads__thread_id__messages__message_id__files__file_id__get_200_response.go  model__v1__threads__thread_id__runs__run_id__steps__step_id__get_200_response.go  model__v1__threads__thread_id__runs__run_id__steps__step_id__get_200_response_step_details.go  model__v1__threads__thread_id__runs__run_id__steps__step_id__get_200_response_step_details_message_creation.go  model__v1_assistants__assistant_id___post_request.go  model__v1_assistants__assistant_id__files_get_200_response.go  model__v1_assistants__assistant_id__files_get_200_response_data_inner.go  model__v1_assistants_get_200_response.go  model__v1_assistants_get_200_response_data_inner.go  (+96 more)
cmd/: config.go  handler.go  main.go
frontend/: main.py  requirements.txt
mux/: config.go
mux/claude/: web.go  (+3 more)
pkg/: backend.go  chatgpt.go  const.go  error.go  event.go  openai.go  storage.go  util.go
pymain/: app.py  pyproject.toml  requirements.txt
pymain/rkllm/: llm.py
pymain/tests/: test_rkllm.py
scripts/: copyright.sh  generate.sh  openai.sh  teststyle.sh
version/: version.go
(+38 files in other folders)
