[tool.poetry]
name = "rkllm"
version = "0.1.0"
description = ""
authors = ["yylt <yang8518296@163.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
pydantic = "^2.10"
uvicorn = "^0.34"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
